<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_login">Login</string>
    <string name="action_login_select">Login</string>
    <string name="action_login_short">Login</string>
    <string name="action_register">Register</string>
    <string name="action_register_select">Register a New Terrorist</string>
    <string name="action_register_short">Register</string>
    <string name="action_setPIN">Save</string>
    <string name="action_setPIN_short">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_short">Settings</string>
    <string name="app_login_activity">TerrorTime</string>
    <string name="app_name">TerrorTime</string>
    <string name="app_register_activity">TerrorTime</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="availability">Availability</string>
    <string name="bad_clientid">Bad Client Id</string>
    <string name="bad_pin">Bad User Pin</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_short">Cancel</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_enter_message">Enter message</string>
    <string name="chat_send">SEND</string>
    <string name="client_login_title">TerrorTime Login</string>
    <string name="client_registration_title">TerrorTime Registration</string>
    <string name="client_settings_title">Account Settings</string>
    <string name="contact_name">Contact Name</string>
    <string name="db_error">Database Error: operation failed</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This client secret is incorrect</string>
    <string name="error_invalid_password">This client secret is invalid. Must be at least 8 characters in length.</string>
    <string name="error_invalid_pin">This pin is invalid. Must be EXACTLY 6 number characters in length.</string>
    <string name="error_invalid_server_ip">IP address or domain name is invalid</string>
    <string name="error_invalid_userName">This client id is invalid</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="main_splash_description">"TerrorTime is a secure and stealthy chat application built just for baddies. Don't leave your lair without it!"</string>
    <string name="main_splash_title">TerrorTime</string>
    <string name="menu_clear_token">Clear Token</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="message_count">0</string>
    <string name="more">Options</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="nav_app_bar_open_drawer_description">Open navigation drawer</string>
    <string name="new_message">New Message</string>
    <string name="ok">OK</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="prompt_OAUTH2_server_ip">Enter OAUTH2 Server IP or Domain Name</string>
    <string name="prompt_XMPP_server_ip">Enter XMPP Server IP or Domain Name</string>
    <string name="prompt_jid">Enter Client Id</string>
    <string name="prompt_password">Enter Client Secret</string>
    <string name="prompt_pin">Enter PIN</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_activity_contact">Contacts</string>
</resources>
