<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/register_form" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/activity_title_size" android:id="@id/register_activity_title" android:paddingBottom="@dimen/activity_title_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/client_registration_title" />
    <EditText android:id="@id/xmpp_server_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_XMPP_server_ip" android:maxLines="1" android:singleLine="true" />
    <EditText android:id="@id/oauth2_server_ip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_OAUTH2_server_ip" android:maxLines="1" android:singleLine="true" android:inputType="text" />
    <EditText android:id="@id/userName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_jid" android:maxLines="1" android:singleLine="true" android:inputType="text" />
    <EditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_password" android:maxLines="1" android:singleLine="true" android:inputType="textPassword" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/action_register_short" android:imeActionId="6" />
    <EditText android:id="@id/pin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/prompt_pin" android:maxLines="1" android:password="true" android:singleLine="true" android:inputType="text" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/prompt_pin" android:imeActionId="6" />
    <Button android:textStyle="bold" android:id="@id/register_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/action_register" style="?android:textAppearanceSmall" />
    <TextView android:textSize="15.0sp" android:id="@id/register_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:textIsSelectable="false" style="?android:textAppearanceSmall" />
    <RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ProgressBar android:id="@id/progressBar1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:progressBarStyleLarge" />
    </RelativeLayout>
</LinearLayout>