<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/availability" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/circle_grey" android:contentDescription="@string/availability" android:layout_alignParentStart="true" />
    <TextView android:textSize="22.0sp" android:id="@id/contact_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/contact_name" android:layout_marginStart="5.0dip" android:layout_toEndOf="@id/availability" />
    <ImageView android:id="@id/new_message" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:src="@drawable/ic_message" android:contentDescription="@string/new_message" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
    <TextView android:textSize="22.0sp" android:gravity="end" android:id="@id/message_count" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/message_count" android:layout_marginEnd="10.0dip" android:layout_toStartOf="@id/new_message" />
</RelativeLayout>