<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:id="@id/login_register_select_form" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="15.0sp" android:id="@id/main_activity_description" android:paddingBottom="@dimen/activity_title_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_splash_description" />
    <Button android:textSize="20.0sp" android:textStyle="bold" android:id="@id/login_button_select" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/action_login_select" android:onClick="launchLoginActivity" style="?android:textAppearanceSmall" />
    <TextView android:textSize="15.0sp" android:id="@id/register_button_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/action_register_select" android:onClick="launchRegisterActivity" android:textIsSelectable="false" style="?android:textAppearanceSmall" />
</LinearLayout>